--- a/curso HTML.html
+++ b/curso HTML.html
@@ -70,7 +70,41 @@
 			<figcaption></figcaption>
 		</figure>
 		<!--En HTML5 se agrega la etiqueta figure, la cual sirve para englobar el contenido de una imagen con otras etiquetas que se puenda asociar, como es el caso de figcaption la cual se utiliza para agregar un pie de imagen o alguna referencia en texto para la imagen. Tambien es importante rellenar el atributo ALT dentro de img, debido a que asi lo demanda la normativa de HTML5, este atributo sirve para asociar un texto a la imagen, el cual se muestra al colocar el puntero sobre la imagen mencionada-->
+			<audio src="audio.wav" type="audio/wav" controls="controls"></audio>
 
 
+	<video src="video.mov" type="video/mov" controls="controls"></video>
+
+	<iframe src="https://www.youtube.com/embed/AjKPR8A6sNI" frameborder="0" allowfullscreen></iframe>
+
+
+
+<!--	
+	
+	<video src="video.mov" type="video/mov" controls="controls" codecs="H.264,vorbis"></video>
+
+
+	atributos:
+
+src 	Cadena que representa una URL que señala a un archivo de vídeo.
+
+controls 	Atributo booleano que activa un conjunto de controles de reproducción integrados. Normalmente incluye reproducción, pausa, buscar y ajustar volumen. Internet Explorer 10 también muestra un control para elegir varias pistas de audio y texto.
+
+poster 	Cadena que representa una imagen de marcador de posición y que se muestra en el reproductor de vídeo. La imagen de póster solo se muestra cuando un vídeo no está disponible, bien porque el origen no está en ese punto o porque el contenido aún se está cargando.
+
+loop 	Atributo booleano que reproduce el vídeo repetidamente hasta que se presiona el botón de pausa en los controles, o se llama al método pause desde un script.
+muted 	Atributo booleano que reproduce vídeo con la pista de audio desactivada.
+
+autoplay 	Atributo booleano que inicia la reproducción de vídeo automáticamente cuando el reproductor tiene suficiente contenido almacenado en búfer.
+
+preload 	Atributo booleano que define una clave sobre cuánto almacenamiento en búfer es necesario.
+
+height 	Establece el alto del reproductor de vídeo, en píxeles.
+
+width 	Establece el ancho del reproductor de vídeo, en píxeles. 
+
+-->
+
+	
 </body>
 </html>
